--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-highlight: #f08;
+    --primary-color: rgb(123, 181, 235);
+}
+
 .word-edit,
 .word-view {
     align-items: center;
@@ -7,7 +12,7 @@
 
 .word-view > label {
     display: inline-block;
-    padding: 4px;
+    padding: 4px 6px;
 }
 
 .word-edit > input {
@@ -16,7 +21,7 @@
 }
 
 .word-view {
-    background-color: rgb(236, 236, 236);
+    background-color: #fff;
 }
 
 .remove-button {
@@ -37,6 +42,16 @@ button {
     padding: 4px;
 }
 
+input {
+    font-family: inherit;
+    padding: 4px;
+}
+
+.fmu-panel,
 .settings-panel {
     padding: 8px 0;
+}
+
+.word-view:hover {
+    opacity: 0.7;
 }
