--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,4 +1,5 @@
 :root {
+    --fmu-background: #eceff1;
     --primary-highlight: #f08;
     --primary-color: rgb(123, 181, 235);
 }
@@ -52,9 +53,4 @@
 
 .fmu-button:hover {
     background-color: rgb(73, 73, 155);
-}
-
-.fmu-panel,
-.settings-panel {
-    padding: 8px 0;
 }
