--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,6 +1,7 @@
 :root {
     --fmu-background: #eceff1;
     --fmu-background-darker: #c6cfd5;
+    --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 #fmu {
@@ -10,7 +11,7 @@
 .word-edit,
 .word-view {
     align-items: center;
-    box-shadow: 0 1px 2px rgba(80, 80, 80, 0.8);
+    box-shadow: var(--card-shadow);
     display: inline-flex;
     font-size: 13px;
 }
