improve button styling

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,6 +1,7 @@
 :root {
     --fmu-background: #eceff1;
     --fmu-background-darker: #c6cfd5;
+    --fmu-highlight: #e91e63;
     --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -46,10 +47,9 @@
 .fmu-button {
     background-color: #7a77a4;
     border: none;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
     color: #fff;
     font-family: inherit;
-    padding: 4px 6px;
+    padding: 4px 12px;
 }
 
 .fmu-button:hover {
